Bringing changes from VETIVER-9.0.4 to master
- Besides bring the changes released, we are also
improving test coverage for some classes.